JavaFX unnecessary modules removed